--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,13 @@
 <header>
   <a href="/" class="logo">InstaSave</a>
   <nav>
-    <a href="/">Instagram</a>
-    <a href="/facebook">Facebook</a>
+    <div class="menu-dropdown">
+      <a href="#" class="menu-trigger">All Tools</a>
+      <div class="submenu">
+        <a href="/">Instagram</a>
+        <a href="/facebook">Facebook</a>
+      </div>
+    </div>
     <a href="#features">Features</a>
     <a href="#howto">How to Use</a>
     <a href="#footer">Contact</a>
