--- a/templates/header.html
+++ b/templates/header.html
@@ -1,15 +1,18 @@
 <header>
-  <a href="/" class="logo">InstaSave</a>
-  <nav>
-    <div class="menu-dropdown">
-      <a href="#" class="menu-trigger">All Tools</a>
-      <div class="submenu">
-        <a href="/">Instagram</a>
-        <a href="/facebook">Facebook</a>
+  <div class="header-inner">
+    <a href="/" class="logo"><i class="fab fa-instagram"></i> InstaSave</a>
+    <button class="burger-menu" aria-label="Open menu"><i class="fas fa-bars"></i></button>
+    <nav class="nav-links">
+      <div class="menu-dropdown">
+        <a href="#" class="menu-trigger"><i class="fas fa-th-large"></i> All Tools</a>
+        <div class="submenu">
+          <a href="/"><i class="fab fa-instagram"></i> Instagram</a>
+          <a href="/facebook"><i class="fab fa-facebook"></i> Facebook</a>
+        </div>
       </div>
-    </div>
-    <a href="#features">Features</a>
-    <a href="#howto">How to Use</a>
-    <a href="#footer">Contact</a>
-  </nav>
+      <a href="#features"><i class="fas fa-bolt"></i> Features</a>
+      <a href="#howto"><i class="fas fa-question-circle"></i> How to Use</a>
+      <a href="#footer"><i class="fas fa-envelope"></i> Contact</a>
+    </nav>
+  </div>
 </header>
