--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='footer.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='features.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='howto.css') }}">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
   {% block css %}<link rel="stylesheet" href="{{ url_for('static', filename='instagram.css') }}">{% endblock %}
   {% block extra_head %}{% endblock %}
 </head>
