--- a/templates/instagram.html
+++ b/templates/instagram.html
@@ -3,6 +3,8 @@
 {% block extra_head %}
 <!-- Any page-specific head content can go here -->
 {% endblock %}
+{% block css %}<link rel="stylesheet" href="{{ url_for('static', filename='css/instagram.css') }}">{% endblock %}
+{% block js %}<script src="{{ url_for('static', filename='js/instagram.js') }}"></script>{% endblock %}
 {% block content %}
 <!-- Hero -->
 <section class="hero">
