--- a/templates/header.html
+++ b/templates/header.html
@@ -1,18 +1,18 @@
 <header>
   <div class="header-inner">
-    <a href="/" class="logo"><i class="fab fa-instagram"></i> InstaSave</a>
-    <button class="burger-menu" aria-label="Open menu"><i class="fas fa-bars"></i></button>
+    <a href="/" class="logo"><i class="fab fa-dropbox"></i> VidPorter</a>
+    <button class="burger-menu" aria-label="Open menu"><i class="fab fa-ubuntu"></i></button>
     <nav class="nav-links">
       <div class="menu-dropdown">
-        <a href="#" class="menu-trigger"><i class="fas fa-th-large"></i> All Tools</a>
+        <a href="#" class="menu-trigger"><i class="fab fa-buromobelexperte"></i> All Tools</a>
         <div class="submenu">
           <a href="/"><i class="fab fa-instagram"></i> Instagram</a>
           <a href="/facebook"><i class="fab fa-facebook"></i> Facebook</a>
         </div>
       </div>
-      <a href="#features"><i class="fas fa-bolt"></i> Features</a>
-      <a href="#howto"><i class="fas fa-question-circle"></i> How to Use</a>
-      <a href="#footer"><i class="fas fa-envelope"></i> Contact</a>
+      <a href="#features"><i class="fab fa-gripfire"></i> Features</a>
+      <a href="#howto"><i class="fab fa-readme"></i> How to Use</a>
+      <a href="#footer"><i class="fab fa-telegram-plane"></i> Contact</a>
     </nav>
   </div>
 </header>
