--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -15,7 +15,7 @@
 <div class="tool-section">
   <form id="facebookDownloadForm">
     <input type="text" name="url" id="facebookUrlInput" placeholder="Paste Facebook video link here" required>
-    <button type="submit">Download Video</button>
+    <button type="submit">Download</button>
   </form>
   <div id="facebookErrorBox" class="error" style="display:none;"></div>
   <div id="facebookPreviewBox" class="preview" style="display:none;"></div>
