--- a/templates/instagram.html
+++ b/templates/instagram.html
@@ -16,7 +16,7 @@
 <div class="tool-section">
   <form id="downloadForm">
     <input type="text" name="url" id="urlInput" placeholder="Paste Instagram post/reel link here" required>
-    <button type="submit">Download Video</button>
+    <button type="submit">Download</button>
   </form>
   <div id="errorBox" class="error" style="display:none;"></div>
   <div id="previewBox" class="preview" style="display:none;"></div>
