--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,7 @@
         <div class="submenu">
           <a href="/"><i class="fab fa-instagram"></i> Instagram</a>
           <a href="/facebook"><i class="fab fa-facebook"></i> Facebook</a>
+          <a href="/linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
         </div>
       </div>
       <a href="#features"><i class="fab fa-gripfire"></i> Features</a>
