--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,7 @@
           <a href="/"><i class="fab fa-instagram"></i> Instagram</a>
           <a href="/facebook"><i class="fab fa-facebook"></i> Facebook</a>
           <a href="/linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
+          <a href="/twitter"><i class="fab fa-twitter"></i> Twitter</a>
         </div>
       </div>
       <a href="#features"><i class="fab fa-gripfire"></i> Features</a>
