Youtube option added & our tools section added in every page

--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -21,6 +21,7 @@
   <div id="facebookPreviewBox" class="preview" style="display:none;"></div>
 </div>
 
+{% include 'our_tools.html' %}
 {% include 'features.html' %}
 {% include 'howto.html' %}
 
