--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="header-inner">
     <a href="/" class="logo"><i class="fab fa-dropbox"></i> VidPorter</a>
-    <button class="burger-menu" aria-label="Open menu"><i class="fab fa-ubuntu"></i></button>
+    <button class="burger-menu" aria-label="Open menu"><i class="fa fa-bars"></i></button>
     <nav class="nav-links">
       <div class="menu-dropdown">
         <a href="#" class="menu-trigger"><i class="fab fa-buromobelexperte"></i> All Tools</a>
@@ -10,6 +10,7 @@
           <a href="/facebook"><i class="fab fa-facebook"></i> Facebook</a>
           <a href="/linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a href="/twitter"><i class="fab fa-twitter"></i> Twitter</a>
+          <a href="/youtube"><i class="fab fa-youtube"></i> YouTube</a>
         </div>
       </div>
       <a href="#features"><i class="fab fa-gripfire"></i> Features</a>
