--- a/templates/linkedin.html
+++ b/templates/linkedin.html
@@ -22,6 +22,7 @@
   <div id="linkedinPreviewBox" class="preview" style="display:none;"></div>
 </div>
 
+{% include 'our_tools.html' %}
 {% include 'features.html' %}
 {% include 'howto.html' %}
 
